indexer/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/instance: indexer
    app.kubernetes.io/name: indexer
  name: indexer
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: indexer
      app.kubernetes.io/name: indexer
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: indexer
        app.kubernetes.io/name: indexer
    spec:
      containers:
        - image: registry.devops.rivtower.com/web5/indexer:${INDEXER_VERSION}
          imagePullPolicy: Always
          name: indexer
          ports:
            - containerPort: ${INDEXER_PORT}
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 4000m
              memory: 4096Mi
            requests:
              cpu: 100m
              memory: 512Mi
          securityContext: {}
        - image: m.daocloud.io/docker.io/postgres:17-bookworm
          imagePullPolicy: IfNotPresent
          name: database
          ports:
            - containerPort: 5432
              name: postgres
              protocol: TCP
          resources:
            limits:
              cpu: 4000m
              memory: 4096Mi
            requests:
              cpu: 100m
              memory: 512Mi
          securityContext: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: database
  volumeClaimTemplates:
    - metadata:
        name: database
      spec:
        accessModes: ['ReadWriteOnce']
        storageClassName: local-path
        resources:
          requests:
            storage: 50Gi
