indexer/svc_node_port.yaml
apiVersion: v1
kind: Service
metadata:
  name: indexer-node-port
  labels:
    app.kubernetes.io/instance: indexer
    app.kubernetes.io/name: indexer
spec:
  type: NodePort
  ports:
    - name: indexer
      port: ${INDEXER_PORT}
      protocol: TCP
      nodePort: ${INDEXER_PORT}
    - name: postgres
      port: 5432
      protocol: TCP
      nodePort: ${INDEXER_DB_NODE_PORT}
  selector:
    app.kubernetes.io/instance: indexer
    app.kubernetes.io/name: indexer
